# Gluten-Trino

./: .gitignore  .gitmodules  README.md  TPP.txt  migrate.sh
.github/workflows/: test.yaml
Gluten-Trino-Cpp/: velox_cast.patch
Gluten-Trino-Cpp/src/: CMakeLists.txt  TrinoExchangeSource.cpp
Gluten-Trino-Cpp/src/functions/: CMakeLists.txt
Gluten-Trino-Cpp/src/protocol/: DataSize.cpp  DataSize.h  Duration.h  trino_protocol-json-cpp.mustache
Gluten-Trino-Cpp/src/protocol/special/: OutputBufferInfo.java
Gluten-Trino-Cpp/src/protocol/tests/: Q6S2.json  split_test.cpp
Gluten-Trino-Cpp/src/serialization/: TrinoByteStream.cpp  TrinoSerializer.h
Gluten-Trino-Cpp/src/test/: serde_test.cpp
Gluten-Trino-Cpp/src/types/: CMakeLists.txt  PrestoToVeloxExpr.h  PrestoToVeloxQueryPlan.h  TrinoTaskId.h
Gluten-Trino-Cpp/src/types/antlr/: TypeSignatureBaseVisitor.cpp  TypeSignatureVisitor.cpp  TypeSignatureVisitor.h
Gluten-Trino-Cpp/src/utils/: Counters.h  HttpClient.h
Gluten-Trino-Java/: pom.xml
Gluten-Trino-Java/src/main/java/io/trino/metadata/: HandleJsonModule.java
GlutenTrinoPlugin/: pom.xml
cpp/: CMakeLists.txt  velox.patch  velox_cast.patch
cpp/scripts/: install_deps_ubuntu.sh  setup-velox-centos7.sh  setup-velox-centos8.sh  setup-velox-ubuntu.sh
cpp/src/: CMakeLists.txt  JniHandle.cpp  JniHandle.h  NativeConfigs.cpp  NativeConfigs.h  PartitionOutputData.cpp  PartitionOutputData.h  TaskHandle.cpp  TaskHandle.h  TrinoBridge.cpp  TrinoExchangeSource.cpp  TrinoExchangeSource.h  utils.cpp  utils.h
cpp/src/functions/: CMakeLists.txt  TpchPartitionFunction.cpp  TpchPartitionFunction.h  TrinoSumAggregate.cpp
cpp/src/functions/tests/: CMakeLists.txt  TpchPartitionFunctionTest.cpp  TrinoSumAggregateTest.cpp
cpp/src/protocol/: Base64Util.cpp  Base64Util.h  CMakeLists.txt  DataSize.cpp  Duration.cpp  Duration.h  Makefile  java-to-struct-json.py  protocol.yml  trino_protocol-json-hpp.mustache
cpp/src/protocol/special/: Block.cpp.inc  Block.hpp.inc  CatalogHandle.cpp.inc  CatalogHandle.hpp.inc  DataSize.cpp.inc  DataSize.hpp.inc  Duration.cpp.inc  Duration.hpp.inc  GlutenConnectorTransactionHandle.cpp.inc  GlutenTpchTransactionHandle.cpp.inc  GlutenTpchTransactionHandle.hpp.inc  GlutenTupleDomain.hpp.inc  GlutenVariableReferenceExpression.hpp.inc  HivePartitioningHandle.java  HostAddress.hpp.inc  JsonEncodedSubclass.cpp.inc  OperatorInfo.cpp.inc  OperatorInfo.hpp.inc  ValueEntry.hpp.inc
cpp/src/protocol/tests/: CMakeLists.txt  SplitTest.cpp  TpchQ6PlanTest.cpp  plan_test.cpp  split_test.cpp
cpp/src/serialization/: CMakeLists.txt  TrinoBuffer.h  TrinoBufferStream.cpp  TrinoBufferStream.h  TrinoByteStream.cpp  TrinoByteStream.h  TrinoSerializer.cpp  TrinoSerializer.h
cpp/src/serialization/tests/: CMakeLists.txt  SerdeTest.cpp
cpp/src/test/: Q6S1.json  serde_test.cpp  workflow_test.cpp
cpp/src/testJson/: HiveSplit.json  Q6S1.json  Q6S2.json  RemoteSplit.json  TpchSplit.json
cpp/src/tests/: CMakeLists.txt  NativeConfigsTest.cpp  PartitionOutputDataTest.cpp
cpp/src/types/: CMakeLists.txt  ParseTypeSignature.h  PrestoToVeloxExpr.cpp  PrestoToVeloxExpr.h  PrestoToVeloxQueryPlan.cpp  PrestoToVeloxQueryPlan.h  PrestoToVeloxSplit.cpp  PrestoToVeloxSplit.h  TrinoTaskId.h  TypeSignature.g4  TypeSignatureTypeConverter.cpp  TypeSignatureTypeConverter.h
cpp/src/types/antlr/: TypeSignatureBaseVisitor.h  TypeSignatureLexer.cpp  TypeSignatureLexer.h  TypeSignatureParser.cpp  TypeSignatureParser.h  TypeSignatureVisitor.h
cpp/src/types/tests/: CMakeLists.txt  PlanConverterTest.cpp  PlanNodeConverterTest.cpp  PrestoToVeloxSplitTest.cpp  RowExpressionConverterTest.cpp  RowExpressionTest.cpp  TypeSignatureConverterTest.cpp  TypeSignatureTest.cpp  ValuesPipeTest.cpp  VeloxSplitConverterTest.cpp  VeloxSplitConvertorTest.cpp
cpp/src/utils/: Configs.cpp  Configs.h  HttpClient.cpp  HttpClient.h  HttpConstants.h  JniUtils.cpp  JniUtils.h  ThreadUtils.cpp  ThreadUtils.h
java/: pom.xml
scripts/: Dockerfile  build_all.sh  check.py  git-clang-format  run_tpch.sh  util.py
trino-cpp/: .gitignore  CMakeLists.txt  Makefile  build.sh  leak_suppress.txt  velox_cast.patch  velox_task.patch
trino-cpp-plugin/: pom.xml
trino-cpp/doc/: EnableAddressSanitizer.md
trino-cpp/src/: CMakeLists.txt  NativeConfigs.cpp  NativeConfigs.h  TestUtils.cpp  TestUtils.h  TrinoBridge.cpp  TrinoBridge.h  TrinoExchangeSource.h  test_utils.cpp  test_utils.h  trino_bridge.cpp  trino_bridge.h  utils.cpp  utils.h
trino-cpp/src/functions/: CMakeLists.txt  TpchPartitionFunction.cpp  TpchPartitionFunction.h  TrinoSumAggregate.cpp
trino-cpp/src/protocol/: Base64Util.cpp  CMakeLists.txt  Makefile  java-to-struct-json.py  protocol.yml
trino-cpp/src/protocol/special/: AggregationNodeStep.java  Block.cpp.inc  Block.hpp.inc  CatalogHandle.hpp.inc  DataSize.cpp.inc  Duration.cpp.inc  Duration.hpp.inc  GlutenConnectorTransactionHandle.cpp.inc  GlutenTpchTransactionHandle.cpp.inc  GlutenTpchTransactionHandle.hpp.inc  GlutenTupleDomain.hpp.inc  MockConnectorTransactionHandle.cpp.inc  MockTpchTransactionHandle.cpp.inc  MockTpchTransactionHandle.hpp.inc  MockVariableReferenceExpression.hpp.inc  OperatorInfo.cpp.inc  OperatorInfo.hpp.inc  SystemPartitioningHandle.java  TupleDomain.hpp.inc
trino-cpp/src/protocol/tests/: CMakeLists.txt  plan_test.cpp
trino-cpp/src/serialization/: CMakeLists.txt  TrinoBufferStream.cpp  TrinoBufferStream.h  TrinoSerializer.cpp  trino_buffer.h  trino_buffer_stream.cpp  trino_buffer_stream.h  trino_byte_stream.cpp  trino_byte_stream.h  trino_serializer.cpp
trino-cpp/src/test/: CMakeLists.txt  Split.json  serde_test.cpp  workflow_test.cpp
trino-cpp/src/types/: PrestoToVeloxExpr.cpp  PrestoToVeloxQueryPlan.cpp  PrestoToVeloxQueryPlan.h  PrestoToVeloxSplit.cpp  PrestoToVeloxSplit.h  TypeSignatureTypeConverter.cpp
trino-cpp/src/types/antlr/: TypeSignatureBaseVisitor.h  TypeSignatureParser.cpp
trino-cpp/src/utils/: Configs.cpp  Configs.h  HttpClient.cpp  HttpConstants.h  JniUtils.cpp  JniUtils.h  NativeListenableFuture.cpp  NativeListenableFuture.h
(+315 files in other folders)
