
set(PROTOCOL_TEST_DEPS)

add_executable(plan_test plan_test.cpp)

add_executable(split_test split_test.cpp)


target_link_libraries(plan_test trino_protocol gluten_trino_functions presto_type_converter gtest velox_core velox_exec velox_tpch_connector velox_hive_connector velox_type_fbhive)
target_link_libraries(split_test trino_protocol gluten_trino_functions presto_type_converter gtest velox_core velox_exec velox_tpch_connector velox_hive_connector velox_type_fbhive)